--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -122,14 +122,15 @@
                 android:layout_alignParentEnd="true" />
 
             <Button
-                android:layout_width="wrap_content"
-                android:text="Confirm"
-                android:layout_height="30dp"
                 android:id="@+id/confirm"
-                android:background="#32565a"
-                android:textAllCaps="false"
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
                 android:layout_alignTop="@+id/editText"
-                android:layout_alignParentEnd="true" />
+                android:layout_alignParentEnd="true"
+                android:background="#32565a"
+                android:text="Search"
+                android:textAllCaps="false"
+                android:drawableLeft="@drawable/search"/>
 
             <TextView
                 android:layout_width="fill_parent"
