--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,8 @@
 
     <color name="contact_name">#333333</color>
     <color name="contact_number">#8c8c8c</color>
+    <color name="white">#fafafa</color>
+    <color name="grey">#68494747</color>
+    <color name="black">#FF101011</color>
+    <color name="green">#22e742</color>
 </resources>
