--- a/app/src/main/res/drawable/edit_text_bg.xml
+++ b/app/src/main/res/drawable/edit_text_bg.xml
@@ -3,10 +3,8 @@
     android:shape="rectangle" android:padding="15dp">
     <solid android:color="#FFFFFF"/>
     <corners
-        android:bottomRightRadius="4dp"
-        android:bottomLeftRadius="4dp"
-        android:topLeftRadius="4dp"
-        android:topRightRadius="4dp"/>
-    <stroke android:width="1dip"
-        android:color="@color/grey" />
+        android:radius="5dp"/>
+    <stroke android:width="1dip" android:color="@color/grey" />
 </shape>
+
+
