--- a/app/src/main/res/layout/design.xml
+++ b/app/src/main/res/layout/design.xml
@@ -18,118 +18,69 @@
             android:layout_height="wrap_content"
             android:text="grader name"
             android:textColor="@color/black"
-            android:textSize="22dp"
+            android:textSize="18dp"
+            android:textStyle="bold"
             android:padding="15dp"
             android:textAllCaps="true"/>
 
-<!--        <Spinner-->
-<!--            android:id="@+id/shift"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_weight="50"-->
-<!--            android:padding="15dp"-->
-<!--            android:layout_marginRight="15dp"-->
-<!--            android:textAlignment="textEnd"/>-->
-
-        <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="3dp"
-            android:padding="5dp"
-            android:background="@drawable/spinner_background"
-            android:orientation="horizontal">
-
-            <Spinner
-                android:id="@+id/shift"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_gravity="center"
-                android:background="@color/grey"
-                android:gravity="center"
-                android:layout_marginLeft="5dp"
-                android:spinnerMode="dropdown" />
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:layout_gravity="center"
-                android:src="@drawable/drop" />
-        </RelativeLayout>
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/row2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="5dp"
-        android:weightSum="100"
-        android:layout_below="@id/row1">
-<!--        <TextView-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:text="grader name"-->
-<!--            android:textColor="@color/black"-->
-<!--            android:textSize="22dp"-->
-<!--            android:padding="15dp"-->
-<!--            android:textAllCaps="true"/>-->
-
-        <RelativeLayout
+        <Spinner
+            android:id="@+id/shift"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginRight="3dp"
-            android:layout_weight=".28"
-            android:padding="5dp"
-            android:background="@drawable/spinner_background"
-            android:orientation="horizontal">
-
-            <Spinner
-                android:id="@+id/spinner2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_gravity="center"
-                android:popupBackground="@color/black"
-                android:gravity="center"
-                android:layout_marginLeft="5dp"
-                android:spinnerMode="dropdown" />
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:layout_gravity="center"
-                android:src="@drawable/drop" />
-        </RelativeLayout>
+            android:layout_marginTop="5dp"
+            android:layout_marginRight="90dp"
+            android:layout_weight="50"
+            android:padding="15dp"
+            android:textAlignment="center"
+            />
     </LinearLayout>
+
+    <EditText
+        android:id="@+id/route"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/row1"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="15dp"
+        android:background="@drawable/edit_text_bg"
+        android:drawableLeft="@drawable/search"
+        android:drawablePadding="20dp"
+        android:editable="false"
+        android:ems="10"
+        android:hint="Search Route"
+        android:onClick="LaunchRouteView"
+        android:padding="10dp"
+        android:textColor="@color/black"
+        android:textColorHint="@color/grey" />
 
     <EditText
         android:id="@+id/confirm"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:layout_below="@id/row2"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginEnd="5dp"
-        android:layout_marginBottom="5dp"
-        android:background="@color/grey"
+        android:layout_below="@id/route"
+        android:layout_margin="15dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="15dp"
+        android:background="@drawable/edit_text_bg"
         android:drawableRight="@drawable/search"
-        android:drawablePadding="10dp"
+        android:drawablePadding="20dp"
+        android:editable="false"
         android:ems="10"
         android:hint="Search farmer number"
+        android:padding="10dp"
         android:textColor="@color/black"
-        android:editable="false"/>
+        android:textColorHint="@color/grey" />
 
     <LinearLayout
         android:id="@+id/row3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_below="@id/row2"
+        android:layout_below="@id/confirm"
         android:padding="5dp"
         android:layout_marginTop="10dp">
         <!--            android:background="@drawable/edit_text_bg"-->
@@ -141,7 +92,7 @@
         android:layout_below="@id/confirm"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Name of Supplier"
+        android:text=""
         android:textColor="@color/black"
         android:textAllCaps="false"
         android:textStyle="bold"
@@ -161,9 +112,9 @@
 
             <Button
                 android:id="@+id/weigh"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="#E0F7FA"
+                android:layout_width="150dp"
+                android:layout_height="45dp"
+                android:background="@color/btn_color"
                 android:text="weigh"
                 android:textAllCaps="false"
                 android:textColor="@color/black"
@@ -171,11 +122,11 @@
 
             <Button
                 android:id="@+id/button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="150dp"
+                android:layout_height="45dp"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentEnd="true"
-                android:background="#E0F7FA"
+                android:background="@color/btn_color"
                 android:text="weight"
                 android:textAllCaps="false"
                 android:textColor="@color/black"
@@ -201,29 +152,30 @@
                 android:id="@+id/sendreport" />
 
             <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="150dp"
+                android:layout_height="45dp"
+                android:background="@color/btn_color"
                 android:text="print"
-                android:visibility="visible"
                 android:textAllCaps="false"
+                android:textColor="@color/black"
                 android:id="@+id/print"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentEnd="true" />
         </RelativeLayout>
     </LinearLayout>
-
+<!--    android:background="#239b3a"-->
     <Button
         android:id="@+id/save"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/row6"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="10dp"
-        android:background="#239b3a"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:background="@drawable/button_bg"
         android:padding="10dp"
         android:text="Save"
-        android:textAllCaps="false" />
+        android:textSize="16dp"
+        android:textStyle="bold"
+        android:textAllCaps="true" />
 
 </RelativeLayout>
