--- a/app/src/main/res/layout/spinner_item.xml
+++ b/app/src/main/res/layout/spinner_item.xml
@@ -1,10 +1,21 @@
+<!--<TextView xmlns:android="http://schemas.android.com/apk/res/android"-->
+<!--    android:id="@android:id/text1"-->
+<!--    style="?android:attr/spinnerItemStyle"-->
+<!--    android:singleLine="true"-->
+<!--    android:textColor="@color/black"-->
+<!--    android:layout_width="match_parent"-->
+<!--    android:layout_height="wrap_content"-->
+<!--    android:ellipsize="marquee"-->
+<!--    android:background="@color/black"-->
+<!--    android:textAlignment="inherit"/>-->
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@android:id/text1"
     style="?android:attr/spinnerItemStyle"
     android:singleLine="true"
-    android:textColor="@color/black"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:ellipsize="marquee"
-    android:background="@color/black"
-    android:textAlignment="inherit"/>
+    android:textAlignment="inherit"
+    android:textStyle="bold"
+    android:textSize="16dp"
+    android:textColor="@color/black"/>
